Simplying styling, making it so the hero text is centered on most viewports

--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -120,41 +120,6 @@
  </div>
 <div class="morning-blue--transition-to-blue">
     <div class="container text-white pt-5 pb-5">
-        <p class="heading-text text-center pb-5">
-            Work-Related Projects
-        </p>
-        <div class="row">
-            <div class="col-lg-9 pt-5 pt-md-2 pt-lg-0">
-                <p class="attribute-heading-text">Automated Media Inc: Contents Protected</p>
-                <p class="reading-font">Angular, ASP.NET Core, Transact-SQL, and MongoDB</p>
-                <p class="attribute-body-text">
-                    During my employment at Automated Media Inc, I designed and architected a sub-application that
-                    functions similarly to a task manager. Database schemas, back-end endpoints, and a corresponding user interface
-                    were created ontop of an existing application.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-9 pt-5 pt-md-3">
-                <p class="attribute-heading-text">Call Harbor: Project 'Betroit'</p>
-                <p class="reading-font">AngularJS, PHP, & mySQL</p>
-                <p class="attribute-body-text">
-                    As a Full-Stack Developer, I developed a web application whose purpose is to automate the new-client process.
-                    There are two interfaces to the application: Client-Side, and Staff-Side.
-                    <br><br>
-                    From the Staff-Side, a staff member would put the client's requests into a specialized form, generate a PIN for the client,
-                    and send the client over to their side of the application.
-                    <br><br>
-                    From the Client-Side, the client uses the pin to log into a customized form whereby they enter in their client data.
-                    Furthermore, this side of the application utilizes REST API services.
-                    The Client-Side app is complex, tabbed, and uses an extensive verification process.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="blue">
-    <div class="container text-white pt-5 pb-5">
         <div class="icon-heading-container pb-5">
             <p class="heading-text">My Skillset</p>
             <i class="material-icons heading-icon">
@@ -162,15 +127,12 @@
             </i>
         </div>
         <div class="text-center reading-font pt-5 pt-md-2 pt-lg-0">
-            <p>C++ & Object Oriented Programming</p>
-            <p>HTML</p>
-            <p>CSS, Bootstrap, Javascript</p>
             <p><strong>Angular</strong></p>
+            <p><strong>ASP.NET Core</strong></p>
             <p><strong>Django</strong></p>
-            <p><strong>PHP & MySQL</strong></p>
-            <p>Git Bash</p>
-            <p>Algorithm Analysis</p>
-            <p>Data Structures</p>
+            <p><strong>PHP</strong></p>
+            <p><strong>Transact-SQL</strong></p>
+            <p><strong>MySQL</strong></p>
         </div>
     </div>
 </div>
