--- a/sph_style/static/sph_style/hero_properties.css
+++ b/sph_style/static/sph_style/hero_properties.css
@@ -1,13 +1,11 @@
 .hero-text {
-    transform: translateY(10rem);
+    text-align: center;
+    position: absolute;
+    top: 40%;
 }
 
 .hero-image {
-    background-image: url("./images/cover-image.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
+    background: linear-gradient(to top, #429bf5, #0021f5);
     height: 100vh;
 }
 
@@ -115,97 +113,7 @@
     text-align: center;
 }
 
-@media (min-width: 1101px) {
-
-    @media (max-height: 600px) {
-        .hero-image {
-            height: 37.5rem;
-        }
-    }
-
-    @media (max-height: 900px) {
-        .hero-image {
-            background: linear-gradient(to top, #429bf5, #0021f5);
-        }
-    }
-}
-
-/* Large Tablet and Small Laptop Displays */
-@media (min-width: 769px) and (max-width: 1100px) {
-    .hero-image {
-        height: 100vh;
-        background: linear-gradient(to top, #429bf5, #0021f5);
-    }
-
-    .hero-text {
-        transform: translate(0rem, 4rem);
-    }
-
-    @media (max-height: 800px) {
-        .hero-text {
-            transform: translate(0rem, 11rem);
-        }
-    }
-
-    @media (min-height: 900px) and (max-height: 1199px) {
-        .hero-text {
-            transform: translate(0rem, 17rem);
-        }
-    }
-
-    @media (min-height: 1200px) {
-        .hero-text {
-            transform: translate(0rem, 25rem);
-        }
-    }
-
-    /* If the user resizes their browser's height (while
-    maintaining their viewport's width) */
-    @media (max-height: 650px) {
-        .hero-image {
-            height: 40rem;
-        }
-    }
-}
-
-@media (min-width: 576px) and (max-width: 768px) {
-    .hero-image {
-        height: 100vh;
-        background: linear-gradient(to top, #429bf5, #0021f5);
-    }
-
-    div.hero-text {
-        transform: translate(0rem, 4rem);
-    }
-
-    @media (max-height: 500px) {
-        .hero-image {
-            height: 31.25rem;
-        }
-    }
-
-    @media (min-height: 1000px) {
-        div.hero-text {
-            transform: translate(0rem, 19rem);
-        }
-    }
-}
-
-
-/*Extra Small Devices*/
-
 @media (min-width: 300px) and (max-width: 575.98px) {
-    div.hero-text {
-        transform: translate(0rem, 11rem);
-    }
-
-    .hero-image {
-        height: 100vh;
-        background-position: top;
-        background: linear-gradient(to top, #429bf5, #0021f5);
-    }
-
-
     .hero-home-heading {
         font-size: 2.4rem;
     }
@@ -217,29 +125,6 @@
     }
     .hero-small-subheading {
         font-size: 1.5rem;
-    }
-
-    /* If the user resizes their browser's width (while
-    maintaining their viewport's height) */
-    @media (min-height: 900px) {
-        div.hero-text {
-            transform: translate(0, 18rem);
-        }
-    }
-
-    /* For devices with a smaller height, like a Galaxy S5 */
-    @media (max-height: 700px) {
-        div.hero-text {
-            transform: translate(0rem, 7rem);
-        }
-    }
-
-    /* If the user resizes their browser's height (while
-    maintaining their viewport's width) */
-    @media (max-height: 500px) {
-        .hero-image {
-            height: 32rem;
-        }
     }
 }
 
