hero image color and resume changes

--- a/sph_style/static/sph_style/hero_properties.css
+++ b/sph_style/static/sph_style/hero_properties.css
@@ -5,7 +5,7 @@
 }
 
 .hero-image {
-    background: radial-gradient(circle at 150%, #00d4ff, #ffc1f9, #00d4ff);
+    background: linear-gradient(to right, #4cdaef, #b270fa);
     height: 100vh;
 }
 
