--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -64,22 +64,21 @@
             </i>
         </p>
         <div class="row">
-            <div class="col-lg-6 pt-5 pt-md-2 pt-lg-0">
+            <div class="col-lg-6">
                 <p class="attribute-heading-text">
-                    <a class="lightblue-link" href="https://wassimkatbey.com" target="_blank">Portfolio & Blogging App</a>
+                    <a class="lightblue-link" href="https://github.com/wkatbey/SapphireBlogging" target="_blank">Sapphire Blogging</a>
                 </p>
-                <p class="reading-font">Django, PostgreSQL, hosted through Heroku</p>
+                <p class="reading-font">Django, Vue, PostgreSQL, to be hosted through Heroku</p>
                 <p class="attribute-body-text">
-                    The website you're currently on; a multi-page Django-based web application! Certain portions of the home
-                    page are actually database-driven -- i.e. CMS
-                    <br><br>
-                    A blogging application runs within the same source code (The 'Blog' button up top). It was later extracted into
-                    its own project.
+                    A blogging application, with a focus on user-oriented design. The colors and gradients on each individual page
+                    communicate that page's purpose to the user.
+
+                    The blogging experience is rich, and immersive.
                 </p>
             </div>
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-0">
                 <p class="attribute-heading-text">
-                    <a class="lightblue-link" href="https://myzipcode.net" target="_blank">What's My Zipcode?</a>
+                    <a class="lightblue-link" href="https://fullpostalcode.com" target="_blank">What's My Zipcode?</a>
                 </p>
                 <p class="reading-font">Django and Angular, hosted through Heroku</p>
                 <p class="attribute-body-text">
@@ -95,14 +94,14 @@
         <div class="row">
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-4">
                 <p class="attribute-heading-text">
-                    <a class="lightblue-link" href="https://github.com/wkatbey/SapphireBlogging" target="_blank">Sapphire Blogging</a>
+                    <a class="lightblue-link" href="https://wassimkatbey.com" target="_blank">Portfolio & Blogging App</a>
                 </p>
-                <p class="reading-font">Django, Vue, PostgreSQL, to be hosted through Heroku</p>
+                <p class="reading-font">Django, PostgreSQL, hosted through Heroku</p>
                 <p class="attribute-body-text">
-                    A blogging application, with a focus on user-oriented design. The colors and gradients on each individual page
-                    communicate that page's purpose to the user.
-
-                    The blogging experience is rich, and immersive.
+                    The website you're currently on; a multi-page Django-based web application!
+                    <br><br>
+                    A blogging application runs within the same source code (The 'Blog' button up top). It was later extracted into
+                    its own project.
                 </p>
             </div>
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-4">
