--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -23,12 +23,10 @@
                 <p class="attribute-heading-text">Automated Media Inc</p>
                 <p class="reading-font">Full-Stack Software Engineer: January 2020 - Present</p>
                 <p class="attribute-body-text">
-                    Created sub-applications within – and maintained – existing web applications. My 
-                    Front-End work was done with Angular 2+, with NgRx state management. My Back-End work with
-                    .NET Core, with Dapper, using SAML SSO. Used Transact-SQL (SQL Server) and MongoDB on 
-                    the persistence layer.
+                    Maintained and added new features to existing web applications. My Front-End work was done with Angular 2+, and 
+                    my Back-End work with ASP.NET Core. I used Transact-SQL (SQL Server) and MongoDB on the persistence layer.
                     <br /><br />
-                    Concerning version control, I used Git and SVN.
+                    I used Git and SVN for version control.
                 </p>
             </div>
             <div class="col-lg-9 pt-3">
@@ -37,9 +35,9 @@
                 <p class="attribute-body-text">
                     Maintained and added new features to an existing web application. My Front-End work
                     was done with Angular 2+, with NgRx state management. My Back-End work with
-                    .NET Core, with Entity Framework and OpenAPI. Used SQL Server on the persistence layer.
+                    ASP.NET Core. I used Transact-SQL (SQL Server) on the persistence layer.
                     <br /><br />
-                    Concerning version control, I used Git and TFS.
+                    I used Git and TFS for version control.
                 </p>
             </div>
 
@@ -48,8 +46,7 @@
                 <p class="reading-font">Full-Stack Developer: June 2018 - March 2019</p>
                 <p class="attribute-body-text">
                     Wrote a Web Application, from start to finish. My Front-End work was done with
-                    AngularJS (Consisted of two SPAs). My Back-End work with PHP. Used MySQL on
-                    the persistence layer.
+                    Angular 1.x, and my Back-End work with PHP. I used MySQL on the persistence layer.
                 </p>
             </div>
         </div>
@@ -70,10 +67,10 @@
                 </p>
                 <p class="reading-font">Django, Vue, PostgreSQL, to be hosted through Heroku</p>
                 <p class="attribute-body-text">
-                    A blogging application, with a focus on user-oriented design. The colors and gradients on each individual page
+                    A blogging application, designed cutely by me. I overuse gradients, but it's so cute. The colors on each individual page
                     communicate that page's purpose to the user.
 
-                    The blogging experience is rich, and immersive.
+                    I wanted a blogging experience that felt immersive. 
                 </p>
             </div>
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-0">
@@ -86,7 +83,7 @@
                     (for any given location in the U.S.) are displayed. Utilizes USPS’ Address Information API.
                     <br><br>
                     There are two versions of this application! It was
-                    originally written with a .NET Core Back-End, you can find the older source code
+                    originally written with an ASP.NET Core Back-End, you can find the older source code
                     <a href="https://github.com/wkatbey/ZipPostalCodeLookup" class="lightblue-link">here</a>.
                 </p>
             </div>
@@ -101,7 +98,7 @@
                     The website you're currently on; a multi-page Django-based web application!
                     <br><br>
                     A blogging application runs within the same source code (The 'Blog' button up top). It was later extracted into
-                    its own project.
+                    its own project (Sapphire Blogging).
                 </p>
             </div>
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-4">
@@ -110,7 +107,7 @@
                 </p>
                 <p class="reading-font">Django</p>
                 <p class="attribute-body-text">
-                    Working together with a team to develop a web application that allows users to compare prices and view food items
+                    Working together with a team to develop a web application that enables users to compare prices and view food items
                     among restaurants on campus.
                 </p>
             </div>
@@ -134,27 +131,17 @@
             <p><strong>MySQL</strong></p>
         </div>
     </div>
+    <div style="margin-left: 10px; color: white">
+        <a style="color: white" href="https://icons8.com">
+            Check out Icons8! I used their icons
+        </a> <br>
+        Copyright &copy Wassim Katbey 2020
+    </div>
 </div>
-    
+
+
+
 {% endblock %}
 
 {% block custom_footer_elements %}
-<footer class="footer" style="margin-top: 5%">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <a class="text-muted" href="https://icons8.com">
-                    Check out Icons8! I used their icons
-                </a>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-6">
-                <span class="text-muted">Copyright &copy Wassim Katbey 2018</span>
-            </div>
-        </div>
-        <br>
-    </div>
-</footer>
 {% endblock %}
