--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block hero-image-type %}
-<div class="hero-sub-image hero-sm blue">
+<div class="hero-sub-image hero-sm noon-blue">
 {% endblock %}
 
 {% block hero-image-text %}
@@ -107,8 +107,8 @@
                 </p>
                 <p class="reading-font">Django</p>
                 <p class="attribute-body-text">
-                    Working together with a team to develop a web application that enables users to compare prices and view food items
-                    among restaurants on campus.
+                    Worked with a team on an application that enables users to compare prices and view food items
+                    among restaurants on campus. This is a school project.
                 </p>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <p><strong>MySQL</strong></p>
         </div>
     </div>
-    <div style="margin-left: 10px; color: white">
+    <div style="margin-left: 10px; color: white; font-size: 9px">
         <a style="color: white" href="https://icons8.com">
             Check out Icons8! I used their icons
         </a> <br>
