--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -67,10 +67,10 @@
                 </p>
                 <p class="reading-font">Django, Vue, PostgreSQL, to be hosted through Heroku</p>
                 <p class="attribute-body-text">
-                    A blogging application, designed cutely by me. I overuse gradients, but it's so cute. The colors on each individual page
+                    A blogging application. I overuse gradients, but it's so cute. The colors on each individual page
                     communicate that page's purpose to the user.
 
-                    I wanted a blogging experience that felt immersive. 
+                    I wanted a blogging experience that felt immersive. Still working on this.
                 </p>
             </div>
             <div class="col-lg-6 pt-5 pt-md-2 pt-lg-0">
@@ -117,7 +117,7 @@
 <div class="morning-blue--transition-to-blue">
     <div class="container text-white pt-5 pb-5">
         <div class="icon-heading-container pb-5">
-            <p class="heading-text">My Skillset</p>
+            <p class="heading-text">Skillset</p>
             <i class="material-icons heading-icon">
                 build
             </i>
