--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -67,7 +67,7 @@
                 </p>
                 <p class="reading-font">Django, Vue, PostgreSQL, to be hosted through Heroku</p>
                 <p class="attribute-body-text">
-                    A blogging application. I overuse gradients, but it's so cute. The colors on each individual page
+                    A blogging application. I overuse gradients. The colors on each individual page
                     communicate that page's purpose to the user.
 
                     I wanted a blogging experience that felt immersive. Still working on this.
